[tool.poetry]
name = "repl_nix_OrderlyElectronicVirtualmachine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websocket = "^0.2.1"
Delorean = "^1.0.0"
requests = "^2.28.2"
rich = "^13.3.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
